[package]
name = "read"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ratatui = "0.30"
crossterm = "0.29"
fern = "0.7"
log = "0.4"

rat-salsa = { version = "4.0", features = ["dialog_widgets"] }
rat-widget = { version = "3.2", features = ["user_directories", "cli-clipboard"] }
rat-theme4 = { version = "4.5" }
